kubernetes/audiohub/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiohub
spec:
  replicas: 2
  selector:
    matchLabels:
      app: audiohub
  template:
    metadata:
      labels:
        app: audiohub
    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: audiohub
        image: cerit.io/roman_alexander_mariancik/audiohub-image
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/src/audiobooks/media
          name: audiohub-media
        resources:
          requests:
            memory: "3Gi"
            cpu: "1"
          limits:
            memory: "6Gi"
            cpu: "2"
      volumes:
      - name: audiohub-media
        persistentVolumeClaim:
          claimName: audiohub-pvc
