kubernetes/audiohub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiohub-svc
spec:
  type: ClusterIP
  ports:
  - name: audiohub-port
    port: 80
    targetPort: 8000
  selector:
    app: audiohub
