kubernetes/audiohub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiohub-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "audiohub-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/proxy-body-size: 16000m
    nginx.org/server-snippets: |
      location /media/ {
        root /usr/src/audiobooks/media;
      }
spec:
  tls:
    - hosts:
        - "audiohub.dyn.cloud.e-infra.cz"
      secretName: audiohub-dyn-cloud-e-infra-cz-tls
  rules:
  - host: "audiohub.dyn.cloud.e-infra.cz"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
              name: audiohub-svc
              port:
                number: 80
